syntax = "proto3";

message MsgRequest {
	int32 id = 1;
	string interface = 2;
	int32 money = 3;
	string type = 4;
	int32 clock = 5;
}

message MsgResponse {
	int32 id = 1;
	string interface = 2;
	string result = 3;
	int32 money = 4;
	int32 clock = 5;
}

service Bank {
	rpc MsgDelivery(MsgRequest) returns (MsgResponse) {}
}  
